--- a/devslopes-social/Info.plist
+++ b/devslopes-social/Info.plist
@@ -38,27 +38,27 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-    <key>CFBundleURLTypes</key>
-    <array>
-        <dict>
-            <key>CFBundleURLSchemes</key>
-            <array>
-                <string>fb107427666488123</string>
-            </array>
-        </dict>
-    </array>
-    <key>FacebookAppID</key>
-    <string>107427666488123</string>
-    <key>FacebookDisplayName</key>
-    <string>Devslopes Social</string>
-    <key>LSApplicationQueriesSchemes</key>
-    <array>
-        <string>fbapi</string>
-        <string>fb-messenger-api</string>
-        <string>fbauth2</string>
-        <string>fbshareextension</string>
-    </array>
-    <key>NSPhotoLibraryUsageDescription</key>
-    <string>{human-readable reason for photo access}</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb107427666488123</string>
+			</array>
+		</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>107427666488123</string>
+	<key>FacebookDisplayName</key>
+	<string>Devslopes Social</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
+	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Access to photos is required for posting</string>
 </dict>
 </plist>
